[gd_scene load_steps=2 format=3 uid="uid://module_list_item"]

[ext_resource type="Script" path="res://resources/test/module_list_item.gd" id="1_item"]

[node name="ModuleListItem" type="Control"]
layout_mode = 2
custom_minimum_size = Vector2(0, 60)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="ModulePreview" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(50, 50)
expand_mode = 1
stretch_mode = 5

[node name="CountLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "x0"
horizontal_alignment = 1
vertical_alignment = 1
